<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <Space
        android:id="@+id/space_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_logo"
        app:layout_constraintVertical_chainStyle="spread_inside"
        />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_max="190dp"
        app:layout_constraintHeight_max="190dp"
        app:layout_constraintVertical_weight="1"
        android:contentDescription="@null"
        android:src="@drawable/logo_primary"
        app:layout_constraintTop_toBottomOf="@id/space_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/space_tv_token_label"
        />

    <Space
        android:id="@+id/space_tv_token_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_token_label"
        />

    <TextView
        android:id="@+id/tv_token_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="12dp"
        android:text="@string/personal_access_token"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/space_tv_token_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_token_input"
        />

    <EditText
        android:id="@+id/et_token_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="12dp"
        android:autofillHints=""
        android:backgroundTint="@color/grey"
        android:hint="@string/personal_access_token"
        android:inputType="textVisiblePassword"
        android:shadowColor="@color/secondary"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/white_hint"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_token_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_token_error"
        />

    <TextView
        android:id="@+id/tv_token_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="12dp"
        android:text="@string/invalid_token"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/et_token_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/space_error_btn_sign_in"
        />

    <Space
        android:id="@+id/space_error_btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_token_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Theme.GitHubRepoViewer.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/sign_in"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/space_error_btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/space_bottom"
        />

    <ProgressBar
        android:id="@+id/progress_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_in"
        />

    <Space
        android:id="@+id/space_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
